--- a/style.css
+++ b/style.css
@@ -63,49 +63,9 @@ h1 {
   background-color: white;
 }
 
-/* html {
-  font-size: 10px;
-}
-
-body,
-html {
+p {
+  position: absolute;
+  top: 0;
+  left: 0;
   margin: 0;
-  padding: 0;
-  font-family: sans-serif;
 }
-
-.keys {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex: 1;
-  min-height: 100vh;
-}
-
-.key {
-  border: 0.2rem solid black;
-  border-radius: 0.5rem;
-  padding: 1rem;
-  margin: 1rem;
-  width: 10rem;
-  text-align: center;
-  transition: 0.1s;
-}
-
-kbd {
-  display: block;
-  font-size: 3.5rem;
-}
-
-.sound {
-  font-size: 1.5rem;
-  text-transform: uppercase;
-  letter-spacing: 0.1rem;
-}
-
-.playing {
-  border-color: #ffc600;
-  box-shadow: 0 0 1rem #ffc600;
-  transform: scale(1.1);
-  z-index: 1;
-} */
